--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,8 @@ body {
 }
 
 header, nav, footer {
-  background: #0000ff;
-  color: #fff;
+  background: #0A01FD;
+  color: #ffffff;
   padding: 1rem;
 }
 
