--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,11 @@ nav a {
   color: white;
   text-decoration: none;
 }
+nav a:link {
+  color: white;
+  text-decoration: none;
+}
+
 nav a:visited {
   color: gray;
 }
