--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,16 @@ a[href^="mailto:"]{
   color: white;
   text-decoration: none;
 }
+.linkedin-link {
+  color: white;
+  text-decoration: none;
+}
 nav a:link {
   color: white;
+  text-decoration: none;
+}
+a {
+  color: black;
   text-decoration: none;
 }
 
