--- a/css/styles.css
+++ b/css/styles.css
@@ -19,11 +19,6 @@ nav ul {
   padding: 0;
 }
 
-a {
-  color: black;
-  text-decoration: none;
-}
-
 a[href^="mailto:"]{
   color: white;
   text-decoration: none;
@@ -35,6 +30,11 @@ a[href^="mailto:"]{
 nav a:link {
   color: white;
   text-decoration: none;
+}
+
+a {
+  color: magenta;
+  text-decoration: underline;
 }
 
 
