--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ nav li {
   position: absolute;
   top: 100%; /* directly under the parent */
   left: 0;
-  background: white;
+  background: black;
   border: 1px solid #ddd;
   padding: 0;
   list-style: none;
