--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,10 @@ a {
   text-decoration: underline;
 }
 
-nav a:link {
+nav a:link,
+nav a:visited,
+nav a:hover,
+nav a:active {
   color: white;
   text-decoration: none;
 }
