--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Century Gothic, sans-serif;
+  font-family: "Century Gothic", Verdana, sans-serif;
   line-height: 1.6;
   margin: 0;
   padding: 0;
